Rework workgroup members endpoints to be more restful
